--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,12 @@
         "vimeo/psalm": "4.4.1"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/thanks": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
+        }
     },
     "autoload": {
         "psr-4": {
